--- a/argo-rollouts/blue-green-strategy/base/rollout.yaml
+++ b/argo-rollouts/blue-green-strategy/base/rollout.yaml
@@ -23,7 +23,7 @@ spec:
         tier: front
     spec:
       containers:
-      - image: quay.io/thiha0000/demoapp:v1
+      - image: quay.io/thiha0000/python-app:v1
         name: web
         imagePullPolicy: Always
         resources: 
