--- a/canary-strategy/prod/kustomization.yaml
+++ b/canary-strategy/prod/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 resources:
 - ../base
 - ingress.yaml
+- preview-service.yaml
 namespace: prod
 patches:
 - path: service.yaml
-- path: preview-service.yaml
 - path: rollout.yaml
