--- a/staging/kustomization.yaml
+++ b/staging/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../base
+- preview-service.yaml
 namespace: staging
 patches:
 - path: service.yaml
